--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,36 +8,57 @@ section:
   template: sections/about.html
 
 # your designation
-designation: Software Engineer
+designation: 一个发际线很危险的程序猿 🧓 → 👴
 
 # your company information
-company:
-  name: GitHub Page.
-  url: "https://ormissia.github.io"
+#company:
+#  name: GitHub Page.
+#  url: "https://ormissia.github.io"
 
 # your resume. this file path should be relative to you "static" directory
 # resume: "files/resume.pdf"
 
 # a summary about you
-summary: '目前主要做Java开发。喜欢在空余时间敲代码，这是我的 [GitHub 首页](https://github.com/ormisia)。'
+summary: 'Hi ! 老铁，来个star吧 [GitHub](https://github.com/ormisia)
+          👉有超棒的自驱学习能力，能根据 [官方文档]() （这个真是个好东西，然而往往最容易被忽视）、
+          [GitHub](https://github.com) （这也是个极好的东西，经常能在上面发现一些有趣的玩意儿）、
+          [各种博客]() （说实话国内的一些网站爬来爬去的真没意思，不过有时候也确实能解决一些疑难杂症）以及一些其他资料来快速学习所需要使用的技术。
+          👉平时喜欢搞一些花里胡哨的东西，比如使用VMWare ESXI搭建个人All in one的服务器，并在上面使用FreeNAS(TrueNAS)搭建网络存储，
+          个人网站也是部署在基于此服务器搭建的Linux集群上（别问我用得上集群么，拿来学习，我喜欢😁）。
+          👉目前短板：1.对微服务相关的东西理解还是不够透彻；2.算法能力有待加强，都在努力恶补中。🏋️'
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
 socialLinks:
-- name: Github
-  icon: "fab fa-github"
-  url: "https://www.github.com/ormissa"
-- name: Blog
-  icon: "fa fa-book"
-  url: "http://ormissia.com:13880"
+  - name: Github
+    icon: "fab fa-github"
+    url: "https://www.github.com/ormissia"
+  - name: Blog
+    icon: "fa fa-book"
+    url: "http://ormissia.com:13880"
+  - name: Email
+    icon: "fa fa-envelope"
+    url: "ormissia@outlook.com"
 
 # your soft skills
 # give the percentage between 50 to 100 with 5 intervals.
 # currently supported colors: blue, yellow, pink, green, sky, orange
 softSkills:
-- name: Golang
-  percentage: 90
-  color: sky
-- name: Java
-  percentage: 85
-  color: yellow
+  - name: Golang
+    percentage: 95
+    color: sky
+  - name: Java
+    percentage: 85
+    color: yellow
+  - name: Linux
+    percentage: 80
+    color: green
+  - name: Microservice
+    percentage: 50
+    color: pink
+  - name: Algorithm
+    percentage: 60
+    color: blue
+  - name: CI/CD
+    percentage: 80
+    color: orange
