--- a/data/cn/site.yaml
+++ b/data/cn/site.yaml
@@ -6,3 +6,5 @@ description: Ormissia's GitHub Pages Blog. 安红豆的 GitHub Pages 博客
 customMenus:
   - name: GitHub
     url: https://github.com/ormissia
+  - name: ormissia.com
+    url: http://ormissia.com:13880
