--- a/config.yaml
+++ b/config.yaml
@@ -31,7 +31,7 @@ params:
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   # It will default to the theme logos if not provided.
   logo:
-    main: images/default-hero.jpg
+    main: images/default-hero.png
     # 页面左上角logo
     inverted: images/inverted-logo.png
     # 标签logo
