--- a/data/zh-cn/author.yaml
+++ b/data/zh-cn/author.yaml
@@ -1,15 +1,15 @@
 # some information about you
-name: "Ormissia"
-nickname: "Ormissia"
-image: "images/avatar.png"
+name: Ormissia
+nickname: Ormissia
+image: images/avatar.png
 
 # greeting message before your name. it will default to "Hi! I am" if not provided
-greeting: "Hi, I am"
+greeting: Hi, I am
 
 # give your contact information. they will be used in the footer
 contactInfo:
-  email: "ormissia@outlook.com"
-  QQ: "1432050813"
+  email: ormissia@outlook.com
+  QQ: 1432050813
 
 # a summary of what you do
 summary:
