--- a/config.yaml
+++ b/config.yaml
@@ -45,9 +45,9 @@ params:
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   # It will default to the theme logos if not provided.
   logo:
-    main: images/default-hero.png
+    main: images/ormissia.png
     # 页面左上角logo
-    inverted: images/inverted-logo.png
+    inverted: images/ormissia.png
     # 标签logo
     favicon: images/favicon.png
 
