--- a/data/zh-cn/sections/experiences.yaml
+++ b/data/zh-cn/sections/experiences.yaml
@@ -2,7 +2,7 @@
 section:
   name: 履历
   id: experiences
-  enable: true
+  enable: false
   weight: 3
   showOnNavbar: true
   # Can optionally hide the title in sections
