--- a/data/zh-cn/sections/skills.yaml
+++ b/data/zh-cn/sections/skills.yaml
@@ -12,18 +12,18 @@ section:
 # Give a summary of you each skill in the summary section.
 skills:
   # 语言
-  - name: Golang
+  - name: Go
     logo: /images/sections/skills/go.svg
-    summary: 熟悉Golang底层，熟练使用pprof等工具进行性能调优
+    summary: 熟悉Go语言基础语法，GMP模型，GC回收机制。熟练使用Golang开发Web后端程序。了解一些Go底层原理，如slice、map扩容机制，反射的机制等。
     url: https://golang.org
 
   - name: Scala
-    logo: /images/sections/skills/java.svg
+    logo: /images/sections/skills/scala.svg
     summary: 熟悉基础语法...（施工中）
 
   - name: Java
     logo: /images/sections/skills/java.svg
-    summary: 熟悉JVM调优，熟练使用Springboot、MyBatis、shiro等主流框架
+    summary: 熟练使用Springboot、MyBatis等主流框架。了解ParNew+CMS的新生代、老年代垃圾回收机制。
 
   # 框架
   # 数据库
@@ -41,35 +41,37 @@ skills:
 
   - name: Elastic
     logo: /images/sections/skills/elastic.svg
-    summary:
+    summary: 熟悉ES常见查询以及搜索推荐、数据建模等。了解常见的分词器，Lucene倒排索引机制以及使用的相关算法。
 
   - name: Hadoop
     logo: /images/sections/skills/hadoop.svg
-    summary:
+    summary: 了解HDFS的基础操作，使用过Hive、Hbase。
 
   # 中间件
   - name: Kafka
     logo: /images/sections/skills/kafka.svg
-    summary:
-
-  - name: RabbitMQ
-    logo: /images/sections/skills/rabbitmq.svg
-    summary: 熟悉RabbitMQ的各种概念，理解消息中间件在项目中起到的流量削峰、系统解耦、延迟处理等作用
+    summary: 熟悉Kafka的各种概念，理解消息中间件在项目中起到的流量削峰、系统解耦、延迟处理等作用。
 
   # 环境
   - name: Linux
     logo: /images/sections/skills/linux.svg
-    summary: 熟练使用常见Linux命令，日常学习和部署个人服务的环境都是基于自己搭建的Linux集群。当然不仅限于Linux，也捣鼓过FreeNAS(FreeBSD)，使用过VMWare ESXI。
+    summary: 熟练使用常见Linux命令，日常学习和部署个人服务的环境都是基于自己搭建的Linux集群。当然不仅限于Linux，也捣鼓过FreeNAS，使用过VMWare ESXI。
 
-  - name: Docker、k8s
+  - name: Kubernetes
     logo: /images/sections/skills/kubernets.svg
-    summary: 熟练使用Docker，熟悉Dockerfile的编写。个人博客后端程序Go语言版即使用打包成Docker镜像的方式进行部署。
+    summary: 理解k8s自动化上线和回滚，服务发现和负载均衡，水平扩缩，自我修复等概念。基于k8s进行二次开发。
 
   # 工具
   - name: Git
     logo: /images/sections/skills/git.svg
-    summary: 熟练使用Git进行代码版本和分支的管理，所有个人代码均托管于GitHub。仅2020.10~2021.2五个月的时间贡献了5w行代码。
+    summary: 熟练使用Git进行代码版本和分支的管理，所有个人代码均托管于GitHub。
 
   - name: Jenkins
     logo: /images/sections/skills/jenkins.svg
-    summary: 理解CI/CD整个流程，熟悉Jenkins的基础使用。个人博客前后端均采用GitHub → (Docker Hub) → Jenkins → Server的方式进行部署。
+    summary: 理解CI/CD整个流程，熟悉Jenkins的基础使用。
+
+  - name: Prometheus
+    logo: /images/sections/skills/jenkins.svg
+    summary: 了解Prometheus的基础使用，熟悉PromeQL的基本用法
+
+
