:beers: add posts

--- a/config.yaml
+++ b/config.yaml
@@ -64,9 +64,20 @@ params:
     # Enable and configure blog posts
     blog:
       enable: true
+      # Share post on different social media
+      shareButtons:
+        linkedin: true
+        reddit: true
+        email: true
     # Enable & configure "Notes" features
     notes:
       enable: true
+
+    # Enable comment feature. There, should be only one of them.
+    comment:
+      enable: false
+      disqus:
+        shortName: ormissia-github-io-posts
 
   # specify whether you want to show Table of Contents in reading page
   enableTOC: true
