--- a/config.yaml
+++ b/config.yaml
@@ -75,7 +75,7 @@ params:
 
     # Enable comment feature. There, should be only one of them.
     comment:
-      enable: false
+      enable: true
       disqus:
         shortName: ormissia-github-io-posts
 
