--- a/data/zh-cn/sections/skills.yaml
+++ b/data/zh-cn/sections/skills.yaml
@@ -4,7 +4,7 @@ section:
   id: skills
   enable: true
   weight: 2
-  showOnNavbar: true
+  showOnNavbar: false
   # Can optionally hide the title in sections
   # hideTitle: true
 
