--- a/data/zh-cn/sections/about.yaml
+++ b/data/zh-cn/sections/about.yaml
@@ -42,10 +42,11 @@ badges:
 
 # 后端开发，大数据开发，算法，微服务，CI/CD，项目管理
 
-  - type: soft-skill-indicator
-    name: Learing
-    percentage: 95
-    color: sky
+  - type: certification
+    name: Elastic Certified Engineer
+    url: "https://certified.elastic.co/045c46df-cb73-46e4-b320-28321390daa7"
+    badge: "https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/55904255"
+
 
   - type: soft-skill-indicator
     name: Team Work
