--- a/config.yaml
+++ b/config.yaml
@@ -56,6 +56,12 @@ params:
   # Default branch of your Git repo
   gitBranch: master
 
+  # Enable dark theme
+  darkMode:
+    provider: darkreader
+    enable: true
+    default: system
+
   # Configure various features of this theme
   features:
     # Enable and configure portfolio
