--- a/data/zh-cn/sections/achievements.yaml
+++ b/data/zh-cn/sections/achievements.yaml
@@ -11,5 +11,5 @@ section:
 # Your achievements achievements
 achievements:
   - title: Elastic Certified Engineer
-    image: /images/sections/achievements/ece.png
+    image: /images/sections/achievements/ece.jpg
     summary: 2022-08-01获得Elastic认证工程师资格
