--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/toha"]
 	path = themes/toha
 	url = https://github.com/hugo-toha/toha.git
+
+[submodule "notes"]
+	path = content/notes/my_notes
+	url = https://github.com/hugo-toha/toha.git
