--- a/data/zh-cn/sections/projects.yaml
+++ b/data/zh-cn/sections/projects.yaml
@@ -2,9 +2,9 @@
 section:
   name: 项目
   id: projects
-  enable: true
+  enable: false
   weight: 5
-  showOnNavbar: true
+  showOnNavbar: false
   # Can optionally hide the title in sections
   # hideTitle: true
 
